@@ -1,35 +1,29 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.common.ssl;
 
-import javax.net.ssl.X509ExtendedKeyManager;
+import org.elasticsearch.core.Tuple;
+
 import java.nio.file.Path;
+import java.security.PrivateKey;
+import java.security.cert.X509Certificate;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+
+import javax.net.ssl.X509ExtendedKeyManager;
 
 /**
  * A {@link SslKeyConfig} that does nothing (provides a null key manager)
  */
-final class EmptyKeyConfig implements SslKeyConfig {
+public final class EmptyKeyConfig implements SslKeyConfig {
 
-    static final EmptyKeyConfig INSTANCE = new EmptyKeyConfig();
+    public static final EmptyKeyConfig INSTANCE = new EmptyKeyConfig();
 
     private EmptyKeyConfig() {
         // Enforce a single instance
@@ -37,7 +31,22 @@ final class EmptyKeyConfig implements SslKeyConfig {
 
     @Override
     public Collection<Path> getDependentFiles() {
-        return Collections.emptyList();
+        return List.of();
+    }
+
+    @Override
+    public List<Tuple<PrivateKey, X509Certificate>> getKeys() {
+        return List.of();
+    }
+
+    @Override
+    public Collection<StoredCertificate> getConfiguredCertificates() {
+        return List.of();
+    }
+
+    @Override
+    public boolean hasKeyMaterial() {
+        return false;
     }
 
     @Override
