@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.action.bulk;
@@ -34,29 +23,31 @@ import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateApplier;
 import org.elasticsearch.cluster.metadata.AliasMetadata;
-import org.elasticsearch.cluster.metadata.IndexMetadata;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
-import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.ComposableIndexTemplate;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.Template;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.collect.ImmutableOpenMap;
-import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.common.util.concurrent.AtomicArray;
 import org.elasticsearch.common.util.concurrent.EsExecutors;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.IndexSettings;
+import org.elasticsearch.index.IndexingPressure;
+import org.elasticsearch.indices.EmptySystemIndices;
+import org.elasticsearch.indices.TestIndexNameExpressionResolver;
 import org.elasticsearch.ingest.IngestService;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.threadpool.ThreadPool.Names;
 import org.elasticsearch.transport.TransportResponseHandler;
 import org.elasticsearch.transport.TransportService;
 import org.junit.Before;
@@ -68,22 +59,21 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.Map;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiConsumer;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.sameInstance;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyInt;
-import static org.mockito.Matchers.anyString;
-import static org.mockito.Matchers.eq;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyZeroInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 public class TransportBulkActionIngestTests extends ESTestCase {
@@ -94,8 +84,7 @@ public class TransportBulkActionIngestTests extends ESTestCase {
     private static final String WITH_DEFAULT_PIPELINE = "index_with_default_pipeline";
     private static final String WITH_DEFAULT_PIPELINE_ALIAS = "alias_for_index_with_default_pipeline";
 
-    private static final Settings SETTINGS =
-        Settings.builder().put(AutoCreateIndex.AUTO_CREATE_INDEX_SETTING.getKey(), true).build();
+    private static final Settings SETTINGS = Settings.builder().put(AutoCreateIndex.AUTO_CREATE_INDEX_SETTING.getKey(), true).build();
 
     private static final Thread DUMMY_WRITE_THREAD = new Thread(ThreadPool.Names.WRITE);
 
@@ -138,21 +127,29 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         boolean indexCreated = true; // If set to false, will be set to true by call to createIndex
 
         TestTransportBulkAction() {
-            super(threadPool, transportService, clusterService, ingestService,
-                null, new ActionFilters(Collections.emptySet()), null,
-                new AutoCreateIndex(
-                    SETTINGS, new ClusterSettings(SETTINGS, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS),
-                    new IndexNameExpressionResolver()
-                )
+            super(
+                threadPool,
+                transportService,
+                clusterService,
+                ingestService,
+                null,
+                new ActionFilters(Collections.emptySet()),
+                TestIndexNameExpressionResolver.newInstance(),
+                new IndexingPressure(SETTINGS),
+                EmptySystemIndices.INSTANCE
             );
         }
+
         @Override
-        protected boolean needToCheck() {
-            return needToCheck;
-        }
-        @Override
-        void executeBulk(Task task, final BulkRequest bulkRequest, final long startTimeNanos, final ActionListener<BulkResponse> listener,
-                final AtomicArray<BulkItemResponse> responses, Map<String, IndexNotFoundException> indicesThatCannotBeCreated) {
+        void executeBulk(
+            Task task,
+            BulkRequest bulkRequest,
+            long startTimeNanos,
+            ActionListener<BulkResponse> listener,
+            String executorName,
+            AtomicArray<BulkItemResponse> responses,
+            Map<String, IndexNotFoundException> indicesThatCannotBeCreated
+        ) {
             assertTrue(indexCreated);
             isExecuted = true;
         }
@@ -167,8 +164,13 @@ public class TransportBulkActionIngestTests extends ESTestCase {
     class TestSingleItemBulkWriteAction extends TransportSingleItemBulkWriteAction<IndexRequest, IndexResponse> {
 
         TestSingleItemBulkWriteAction(TestTransportBulkAction bulkAction) {
-            super(IndexAction.NAME, TransportBulkActionIngestTests.this.transportService,
-                    new ActionFilters(Collections.emptySet()), IndexRequest::new, bulkAction);
+            super(
+                IndexAction.NAME,
+                TransportBulkActionIngestTests.this.transportService,
+                new ActionFilters(Collections.emptySet()),
+                IndexRequest::new,
+                bulkAction
+            );
         }
     }
 
@@ -176,9 +178,8 @@ public class TransportBulkActionIngestTests extends ESTestCase {
     public void setupAction() {
         // initialize captors, which must be members to use @Capture because of generics
         threadPool = mock(ThreadPool.class);
-        final ExecutorService direct = EsExecutors.newDirectExecutorService();
-        when(threadPool.executor(anyString())).thenReturn(direct);
-        MockitoAnnotations.initMocks(this);
+        when(threadPool.executor(anyString())).thenReturn(EsExecutors.DIRECT_EXECUTOR_SERVICE);
+        MockitoAnnotations.openMocks(this);
         // setup services that will be called by action
         transportService = mock(TransportService.class);
         clusterService = mock(ClusterService.class);
@@ -191,27 +192,46 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         remoteNode2 = mock(DiscoveryNode.class);
         nodes = mock(DiscoveryNodes.class);
         ImmutableOpenMap<String, DiscoveryNode> ingestNodes = ImmutableOpenMap.<String, DiscoveryNode>builder(2)
-            .fPut("node1", remoteNode1).fPut("node2", remoteNode2).build();
+            .fPut("node1", remoteNode1)
+            .fPut("node2", remoteNode2)
+            .build();
         when(nodes.getIngestNodes()).thenReturn(ingestNodes);
         when(nodes.getMinNodeVersion()).thenReturn(VersionUtils.randomCompatibleVersion(random(), Version.CURRENT));
         ClusterState state = mock(ClusterState.class);
         when(state.getNodes()).thenReturn(nodes);
-        Metadata metadata = Metadata.builder().indices(ImmutableOpenMap.<String, IndexMetadata>builder()
-            .putAll(
-                Collections.singletonMap(
-                    WITH_DEFAULT_PIPELINE,
-                    IndexMetadata.builder(WITH_DEFAULT_PIPELINE).settings(
-                        settings(Version.CURRENT).put(IndexSettings.DEFAULT_PIPELINE.getKey(), "default_pipeline")
-                            .build()
-                    ).putAlias(AliasMetadata.builder(WITH_DEFAULT_PIPELINE_ALIAS).build()).numberOfShards(1).numberOfReplicas(1).build()))
-            .build()).build();
+        Metadata metadata = Metadata.builder()
+            .indices(
+                ImmutableOpenMap.<String, IndexMetadata>builder()
+                    .putAll(
+                        Map.of(
+                            WITH_DEFAULT_PIPELINE,
+                            IndexMetadata.builder(WITH_DEFAULT_PIPELINE)
+                                .settings(
+                                    settings(Version.CURRENT).put(IndexSettings.DEFAULT_PIPELINE.getKey(), "default_pipeline").build()
+                                )
+                                .putAlias(AliasMetadata.builder(WITH_DEFAULT_PIPELINE_ALIAS).build())
+                                .numberOfShards(1)
+                                .numberOfReplicas(1)
+                                .build(),
+                            ".system",
+                            IndexMetadata.builder(".system")
+                                .settings(settings(Version.CURRENT))
+                                .system(true)
+                                .numberOfShards(1)
+                                .numberOfReplicas(0)
+                                .build()
+                        )
+                    )
+                    .build()
+            )
+            .build();
         when(state.getMetadata()).thenReturn(metadata);
         when(state.metadata()).thenReturn(metadata);
         when(clusterService.state()).thenReturn(state);
         doAnswer(invocation -> {
             ClusterChangedEvent event = mock(ClusterChangedEvent.class);
             when(event.state()).thenReturn(state);
-            ((ClusterStateApplier)invocation.getArguments()[0]).applyClusterState(event);
+            ((ClusterStateApplier) invocation.getArguments()[0]).applyClusterState(event);
             return null;
         }).when(clusterService).addStateApplier(any(ClusterStateApplier.class));
         // setup the mocked ingest service for capturing calls
@@ -226,21 +246,27 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         IndexRequest indexRequest = new IndexRequest("index").id("id");
         indexRequest.source(Collections.emptyMap());
         bulkRequest.add(indexRequest);
-        ActionTestUtils.execute(action, null, bulkRequest, ActionListener.wrap(response -> {}, exception -> {
-            throw new AssertionError(exception);
-        }));
+        ActionTestUtils.execute(
+            action,
+            null,
+            bulkRequest,
+            ActionListener.wrap(response -> {}, exception -> { throw new AssertionError(exception); })
+        );
         assertTrue(action.isExecuted);
-        verifyZeroInteractions(ingestService);
+        verifyNoMoreInteractions(ingestService);
     }
 
     public void testSingleItemBulkActionIngestSkipped() throws Exception {
         IndexRequest indexRequest = new IndexRequest("index").id("id");
         indexRequest.source(Collections.emptyMap());
-        ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, ActionListener.wrap(response -> {}, exception -> {
-            throw new AssertionError(exception);
-        }));
+        ActionTestUtils.execute(
+            singleItemBulkWriteAction,
+            null,
+            indexRequest,
+            ActionListener.wrap(response -> {}, exception -> { throw new AssertionError(exception); })
+        );
         assertTrue(action.isExecuted);
-        verifyZeroInteractions(ingestService);
+        verifyNoMoreInteractions(ingestService);
     }
 
     public void testIngestLocal() throws Exception {
@@ -257,23 +283,27 @@ public class TransportBulkActionIngestTests extends ESTestCase {
 
         AtomicBoolean responseCalled = new AtomicBoolean(false);
         AtomicBoolean failureCalled = new AtomicBoolean(false);
-        ActionTestUtils.execute(action, null, bulkRequest, ActionListener.wrap(
-            response -> {
-                BulkItemResponse itemResponse = response.iterator().next();
-                assertThat(itemResponse.getFailure().getMessage(), containsString("fake exception"));
-                responseCalled.set(true);
-            },
-            e -> {
-                assertThat(e, sameInstance(exception));
-                failureCalled.set(true);
-            }));
+        ActionTestUtils.execute(action, null, bulkRequest, ActionListener.wrap(response -> {
+            BulkItemResponse itemResponse = response.iterator().next();
+            assertThat(itemResponse.getFailure().getMessage(), containsString("fake exception"));
+            responseCalled.set(true);
+        }, e -> {
+            assertThat(e, sameInstance(exception));
+            failureCalled.set(true);
+        }));
 
         // check failure works, and passes through to the listener
         assertFalse(action.isExecuted); // haven't executed yet
         assertFalse(responseCalled.get());
         assertFalse(failureCalled.get());
-        verify(ingestService).executeBulkRequest(eq(bulkRequest.numberOfActions()), bulkDocsItr.capture(),
-            failureHandler.capture(), completionHandler.capture(), any());
+        verify(ingestService).executeBulkRequest(
+            eq(bulkRequest.numberOfActions()),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
         completionHandler.getValue().accept(null, exception);
         assertTrue(failureCalled.get());
 
@@ -284,7 +314,7 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         completionHandler.getValue().accept(DUMMY_WRITE_THREAD, null);
         assertTrue(action.isExecuted);
         assertFalse(responseCalled.get()); // listener would only be called by real index action, not our mocked one
-        verifyZeroInteractions(transportService);
+        verifyNoMoreInteractions(transportService);
     }
 
     public void testSingleItemBulkActionIngestLocal() throws Exception {
@@ -294,21 +324,28 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         indexRequest.setPipeline("testpipeline");
         AtomicBoolean responseCalled = new AtomicBoolean(false);
         AtomicBoolean failureCalled = new AtomicBoolean(false);
-        ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, ActionListener.wrap(
-                response -> {
-                    responseCalled.set(true);
-                },
-                e -> {
-                    assertThat(e, sameInstance(exception));
-                    failureCalled.set(true);
-                }));
+        ActionTestUtils.execute(
+            singleItemBulkWriteAction,
+            null,
+            indexRequest,
+            ActionListener.wrap(response -> { responseCalled.set(true); }, e -> {
+                assertThat(e, sameInstance(exception));
+                failureCalled.set(true);
+            })
+        );
 
         // check failure works, and passes through to the listener
         assertFalse(action.isExecuted); // haven't executed yet
         assertFalse(responseCalled.get());
         assertFalse(failureCalled.get());
-        verify(ingestService).executeBulkRequest(eq(1), bulkDocsItr.capture(), failureHandler.capture(),
-            completionHandler.capture(), any());
+        verify(ingestService).executeBulkRequest(
+            eq(1),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
         completionHandler.getValue().accept(null, exception);
         assertTrue(failureCalled.get());
 
@@ -317,7 +354,55 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         completionHandler.getValue().accept(DUMMY_WRITE_THREAD, null);
         assertTrue(action.isExecuted);
         assertFalse(responseCalled.get()); // listener would only be called by real index action, not our mocked one
-        verifyZeroInteractions(transportService);
+        verifyNoMoreInteractions(transportService);
+    }
+
+    public void testIngestSystemLocal() throws Exception {
+        Exception exception = new Exception("fake exception");
+        BulkRequest bulkRequest = new BulkRequest();
+        IndexRequest indexRequest1 = new IndexRequest(".system").id("id");
+        indexRequest1.source(Collections.emptyMap());
+        indexRequest1.setPipeline("testpipeline");
+        IndexRequest indexRequest2 = new IndexRequest(".system").id("id");
+        indexRequest2.source(Collections.emptyMap());
+        indexRequest2.setPipeline("testpipeline");
+        bulkRequest.add(indexRequest1);
+        bulkRequest.add(indexRequest2);
+
+        AtomicBoolean responseCalled = new AtomicBoolean(false);
+        AtomicBoolean failureCalled = new AtomicBoolean(false);
+        ActionTestUtils.execute(action, null, bulkRequest, ActionListener.wrap(response -> {
+            BulkItemResponse itemResponse = response.iterator().next();
+            assertThat(itemResponse.getFailure().getMessage(), containsString("fake exception"));
+            responseCalled.set(true);
+        }, e -> {
+            assertThat(e, sameInstance(exception));
+            failureCalled.set(true);
+        }));
+
+        // check failure works, and passes through to the listener
+        assertFalse(action.isExecuted); // haven't executed yet
+        assertFalse(responseCalled.get());
+        assertFalse(failureCalled.get());
+        verify(ingestService).executeBulkRequest(
+            eq(bulkRequest.numberOfActions()),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.SYSTEM_WRITE)
+        );
+        completionHandler.getValue().accept(null, exception);
+        assertTrue(failureCalled.get());
+
+        // now check success
+        Iterator<DocWriteRequest<?>> req = bulkDocsItr.getValue().iterator();
+        failureHandler.getValue().accept(0, exception); // have an exception for our one index request
+        indexRequest2.setPipeline(IngestService.NOOP_PIPELINE_NAME); // this is done by the real pipeline execution service when processing
+        completionHandler.getValue().accept(DUMMY_WRITE_THREAD, null);
+        assertTrue(action.isExecuted);
+        assertFalse(responseCalled.get()); // listener would only be called by real index action, not our mocked one
+        verifyNoMoreInteractions(transportService);
     }
 
     public void testIngestForward() throws Exception {
@@ -329,18 +414,14 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         bulkRequest.add(indexRequest);
         BulkResponse bulkResponse = mock(BulkResponse.class);
         AtomicBoolean responseCalled = new AtomicBoolean(false);
-        ActionListener<BulkResponse> listener = ActionListener.wrap(
-            response -> {
-                responseCalled.set(true);
-                assertSame(bulkResponse, response);
-            },
-            e -> {
-                throw new AssertionError(e);
-            });
+        ActionListener<BulkResponse> listener = ActionListener.wrap(response -> {
+            responseCalled.set(true);
+            assertSame(bulkResponse, response);
+        }, e -> { throw new AssertionError(e); });
         ActionTestUtils.execute(action, null, bulkRequest, listener);
 
         // should not have executed ingest locally
-        verify(ingestService, never()).executeBulkRequest(anyInt(), any(), any(), any(), any());
+        verify(ingestService, never()).executeBulkRequest(anyInt(), any(), any(), any(), any(), any());
         // but instead should have sent to a remote node with the transport service
         ArgumentCaptor<DiscoveryNode> node = ArgumentCaptor.forClass(DiscoveryNode.class);
         verify(transportService).sendRequest(node.capture(), eq(BulkAction.NAME), any(), remoteResponseHandler.capture());
@@ -373,18 +454,14 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         indexRequest.setPipeline("testpipeline");
         IndexResponse indexResponse = mock(IndexResponse.class);
         AtomicBoolean responseCalled = new AtomicBoolean(false);
-        ActionListener<IndexResponse> listener = ActionListener.wrap(
-                response -> {
-                    responseCalled.set(true);
-                    assertSame(indexResponse, response);
-                },
-                e -> {
-                    throw new AssertionError(e);
-                });
+        ActionListener<IndexResponse> listener = ActionListener.wrap(response -> {
+            responseCalled.set(true);
+            assertSame(indexResponse, response);
+        }, e -> { throw new AssertionError(e); });
         ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, listener);
 
         // should not have executed ingest locally
-        verify(ingestService, never()).executeBulkRequest(anyInt(), any(), any(), any(), any());
+        verify(ingestService, never()).executeBulkRequest(anyInt(), any(), any(), any(), any(), any());
         // but instead should have sent to a remote node with the transport service
         ArgumentCaptor<DiscoveryNode> node = ArgumentCaptor.forClass(DiscoveryNode.class);
         verify(transportService).sendRequest(node.capture(), eq(BulkAction.NAME), any(), remoteResponseHandler.capture());
@@ -395,7 +472,7 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         assertFalse(action.isExecuted); // no local index execution
         assertFalse(responseCalled.get()); // listener not called yet
 
-        BulkItemResponse itemResponse = new BulkItemResponse(0, DocWriteRequest.OpType.CREATE, indexResponse);
+        BulkItemResponse itemResponse = BulkItemResponse.success(0, DocWriteRequest.OpType.CREATE, indexResponse);
         BulkItemResponse[] bulkItemResponses = new BulkItemResponse[1];
         bulkItemResponses[0] = itemResponse;
         remoteResponseHandler.getValue().handleResponse(new BulkResponse(bulkItemResponses, 0)); // call the listener for the remote node
@@ -422,12 +499,12 @@ public class TransportBulkActionIngestTests extends ESTestCase {
     }
 
     public void testUseDefaultPipelineWithBulkUpsert() throws Exception {
-        String indexRequestName = randomFrom(new String[]{null, WITH_DEFAULT_PIPELINE, WITH_DEFAULT_PIPELINE_ALIAS});
+        String indexRequestName = randomFrom(new String[] { null, WITH_DEFAULT_PIPELINE, WITH_DEFAULT_PIPELINE_ALIAS });
         validatePipelineWithBulkUpsert(indexRequestName, WITH_DEFAULT_PIPELINE);
     }
 
     public void testUseDefaultPipelineWithBulkUpsertWithAlias() throws Exception {
-        String indexRequestName = randomFrom(new String[]{null, WITH_DEFAULT_PIPELINE, WITH_DEFAULT_PIPELINE_ALIAS});
+        String indexRequestName = randomFrom(new String[] { null, WITH_DEFAULT_PIPELINE, WITH_DEFAULT_PIPELINE_ALIAS });
         validatePipelineWithBulkUpsert(indexRequestName, WITH_DEFAULT_PIPELINE_ALIAS);
     }
 
@@ -437,14 +514,12 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         IndexRequest indexRequest1 = new IndexRequest(indexRequestIndexName).id("id1").source(Collections.emptyMap());
         IndexRequest indexRequest2 = new IndexRequest(indexRequestIndexName).id("id2").source(Collections.emptyMap());
         IndexRequest indexRequest3 = new IndexRequest(indexRequestIndexName).id("id3").source(Collections.emptyMap());
-        UpdateRequest upsertRequest = new UpdateRequest(updateRequestIndexName, "id1")
-            .upsert(indexRequest1).script(mockScript("1"));
-        UpdateRequest docAsUpsertRequest = new UpdateRequest(updateRequestIndexName, "id2")
-            .doc(indexRequest2).docAsUpsert(true);
+        UpdateRequest upsertRequest = new UpdateRequest(updateRequestIndexName, "id1").upsert(indexRequest1).script(mockScript("1"));
+        UpdateRequest docAsUpsertRequest = new UpdateRequest(updateRequestIndexName, "id2").doc(indexRequest2).docAsUpsert(true);
         // this test only covers the mechanics that scripted bulk upserts will execute a default pipeline. However, in practice scripted
         // bulk upserts with a default pipeline are a bit surprising since the script executes AFTER the pipeline.
-        UpdateRequest scriptedUpsert = new UpdateRequest(updateRequestIndexName, "id2")
-            .upsert(indexRequest3).script(mockScript("1"))
+        UpdateRequest scriptedUpsert = new UpdateRequest(updateRequestIndexName, "id2").upsert(indexRequest3)
+            .script(mockScript("1"))
             .scriptedUpsert(true);
         bulkRequest.add(upsertRequest).add(docAsUpsertRequest).add(scriptedUpsert);
 
@@ -453,23 +528,27 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         assertNull(indexRequest1.getPipeline());
         assertNull(indexRequest2.getPipeline());
         assertNull(indexRequest3.getPipeline());
-        ActionTestUtils.execute(action, null, bulkRequest, ActionListener.wrap(
-            response -> {
-                BulkItemResponse itemResponse = response.iterator().next();
-                assertThat(itemResponse.getFailure().getMessage(), containsString("fake exception"));
-                responseCalled.set(true);
-            },
-            e -> {
-                assertThat(e, sameInstance(exception));
-                failureCalled.set(true);
-            }));
+        ActionTestUtils.execute(action, null, bulkRequest, ActionListener.wrap(response -> {
+            BulkItemResponse itemResponse = response.iterator().next();
+            assertThat(itemResponse.getFailure().getMessage(), containsString("fake exception"));
+            responseCalled.set(true);
+        }, e -> {
+            assertThat(e, sameInstance(exception));
+            failureCalled.set(true);
+        }));
 
         // check failure works, and passes through to the listener
         assertFalse(action.isExecuted); // haven't executed yet
         assertFalse(responseCalled.get());
         assertFalse(failureCalled.get());
-        verify(ingestService).executeBulkRequest(eq(bulkRequest.numberOfActions()), bulkDocsItr.capture(),
-            failureHandler.capture(), completionHandler.capture(), any());
+        verify(ingestService).executeBulkRequest(
+            eq(bulkRequest.numberOfActions()),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
         assertEquals(indexRequest1.getPipeline(), "default_pipeline");
         assertEquals(indexRequest2.getPipeline(), "default_pipeline");
         assertEquals(indexRequest3.getPipeline(), "default_pipeline");
@@ -483,7 +562,7 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         completionHandler.getValue().accept(DUMMY_WRITE_THREAD, null);
         assertTrue(action.isExecuted);
         assertFalse(responseCalled.get()); // listener would only be called by real index action, not our mocked one
-        verifyZeroInteractions(transportService);
+        verifyNoMoreInteractions(transportService);
     }
 
     public void testDoExecuteCalledTwiceCorrectly() throws Exception {
@@ -495,20 +574,29 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         AtomicBoolean failureCalled = new AtomicBoolean(false);
         action.needToCheck = true;
         action.indexCreated = false;
-        ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, ActionListener.wrap(
-            response -> responseCalled.set(true),
-            e -> {
+        ActionTestUtils.execute(
+            singleItemBulkWriteAction,
+            null,
+            indexRequest,
+            ActionListener.wrap(response -> responseCalled.set(true), e -> {
                 assertThat(e, sameInstance(exception));
                 failureCalled.set(true);
-            }));
+            })
+        );
 
         // check failure works, and passes through to the listener
         assertFalse(action.isExecuted); // haven't executed yet
         assertFalse(action.indexCreated); // no index yet
         assertFalse(responseCalled.get());
         assertFalse(failureCalled.get());
-        verify(ingestService).executeBulkRequest(eq(1), bulkDocsItr.capture(), failureHandler.capture(),
-            completionHandler.capture(), any());
+        verify(ingestService).executeBulkRequest(
+            eq(1),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
         completionHandler.getValue().accept(null, exception);
         assertFalse(action.indexCreated); // still no index yet, the ingest node failed.
         assertTrue(failureCalled.get());
@@ -519,74 +607,112 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         assertTrue(action.isExecuted);
         assertTrue(action.indexCreated); // now the index is created since we skipped the ingest node path.
         assertFalse(responseCalled.get()); // listener would only be called by real index action, not our mocked one
-        verifyZeroInteractions(transportService);
+        verifyNoMoreInteractions(transportService);
     }
 
-    public void testNotFindDefaultPipelineFromTemplateMatches(){
+    public void testNotFindDefaultPipelineFromTemplateMatches() {
         Exception exception = new Exception("fake exception");
         IndexRequest indexRequest = new IndexRequest("missing_index").id("id");
         indexRequest.source(Collections.emptyMap());
         AtomicBoolean responseCalled = new AtomicBoolean(false);
         AtomicBoolean failureCalled = new AtomicBoolean(false);
-        ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, ActionListener.wrap(
-            response -> responseCalled.set(true),
-            e -> {
+        ActionTestUtils.execute(
+            singleItemBulkWriteAction,
+            null,
+            indexRequest,
+            ActionListener.wrap(response -> responseCalled.set(true), e -> {
                 assertThat(e, sameInstance(exception));
                 failureCalled.set(true);
-            }));
+            })
+        );
         assertEquals(IngestService.NOOP_PIPELINE_NAME, indexRequest.getPipeline());
-        verifyZeroInteractions(ingestService);
+        verifyNoMoreInteractions(ingestService);
 
     }
 
-    public void testFindDefaultPipelineFromTemplateMatch(){
+    public void testFindDefaultPipelineFromTemplateMatch() {
         Exception exception = new Exception("fake exception");
         ClusterState state = clusterService.state();
 
         ImmutableOpenMap.Builder<String, IndexTemplateMetadata> templateMetadataBuilder = ImmutableOpenMap.builder();
-        templateMetadataBuilder.put("template1", IndexTemplateMetadata.builder("template1").patterns(Arrays.asList("missing_index"))
-            .order(1).settings(Settings.builder().put(IndexSettings.DEFAULT_PIPELINE.getKey(), "pipeline1").build()).build());
-        templateMetadataBuilder.put("template2", IndexTemplateMetadata.builder("template2").patterns(Arrays.asList("missing_*"))
-            .order(2).settings(Settings.builder().put(IndexSettings.DEFAULT_PIPELINE.getKey(), "pipeline2").build()).build());
-        templateMetadataBuilder.put("template3", IndexTemplateMetadata.builder("template3").patterns(Arrays.asList("missing*"))
-            .order(3).build());
-        templateMetadataBuilder.put("template4", IndexTemplateMetadata.builder("template4").patterns(Arrays.asList("nope"))
-            .order(4).settings(Settings.builder().put(IndexSettings.DEFAULT_PIPELINE.getKey(), "pipeline4").build()).build());
+        templateMetadataBuilder.put(
+            "template1",
+            IndexTemplateMetadata.builder("template1")
+                .patterns(Arrays.asList("missing_index"))
+                .order(1)
+                .settings(Settings.builder().put(IndexSettings.DEFAULT_PIPELINE.getKey(), "pipeline1").build())
+                .build()
+        );
+        templateMetadataBuilder.put(
+            "template2",
+            IndexTemplateMetadata.builder("template2")
+                .patterns(Arrays.asList("missing_*"))
+                .order(2)
+                .settings(Settings.builder().put(IndexSettings.DEFAULT_PIPELINE.getKey(), "pipeline2").build())
+                .build()
+        );
+        templateMetadataBuilder.put(
+            "template3",
+            IndexTemplateMetadata.builder("template3").patterns(Arrays.asList("missing*")).order(3).build()
+        );
+        templateMetadataBuilder.put(
+            "template4",
+            IndexTemplateMetadata.builder("template4")
+                .patterns(Arrays.asList("nope"))
+                .order(4)
+                .settings(Settings.builder().put(IndexSettings.DEFAULT_PIPELINE.getKey(), "pipeline4").build())
+                .build()
+        );
 
         Metadata metadata = mock(Metadata.class);
         when(state.metadata()).thenReturn(metadata);
         when(state.getMetadata()).thenReturn(metadata);
-        when(metadata.templates()).thenReturn(templateMetadataBuilder.build());
-        when(metadata.getTemplates()).thenReturn(templateMetadataBuilder.build());
+        final ImmutableOpenMap<String, IndexTemplateMetadata> templateMetadata = templateMetadataBuilder.build();
+        when(metadata.templates()).thenReturn(templateMetadata);
+        when(metadata.getTemplates()).thenReturn(templateMetadata);
         when(metadata.indices()).thenReturn(ImmutableOpenMap.of());
 
         IndexRequest indexRequest = new IndexRequest("missing_index").id("id");
         indexRequest.source(Collections.emptyMap());
         AtomicBoolean responseCalled = new AtomicBoolean(false);
         AtomicBoolean failureCalled = new AtomicBoolean(false);
-        ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, ActionListener.wrap(
-            response -> responseCalled.set(true),
-            e -> {
+        ActionTestUtils.execute(
+            singleItemBulkWriteAction,
+            null,
+            indexRequest,
+            ActionListener.wrap(response -> responseCalled.set(true), e -> {
                 assertThat(e, sameInstance(exception));
                 failureCalled.set(true);
-            }));
+            })
+        );
 
         assertEquals("pipeline2", indexRequest.getPipeline());
-        verify(ingestService).executeBulkRequest(eq(1), bulkDocsItr.capture(), failureHandler.capture(),
-            completionHandler.capture(), any());
+        verify(ingestService).executeBulkRequest(
+            eq(1),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
     }
 
     public void testFindDefaultPipelineFromV2TemplateMatch() {
         Exception exception = new Exception("fake exception");
 
-        ComposableIndexTemplate t1 = new ComposableIndexTemplate(Collections.singletonList("missing_*"),
+        ComposableIndexTemplate t1 = new ComposableIndexTemplate(
+            Collections.singletonList("missing_*"),
             new Template(Settings.builder().put(IndexSettings.DEFAULT_PIPELINE.getKey(), "pipeline2").build(), null, null),
-            null, null, null, null, null);
+            null,
+            null,
+            null,
+            null,
+            null,
+            null
+        );
 
         ClusterState state = clusterService.state();
-        Metadata metadata = Metadata.builder()
-            .put("my-template", t1)
-            .build();
+        Metadata metadata = Metadata.builder().put("my-template", t1).build();
         when(state.metadata()).thenReturn(metadata);
         when(state.getMetadata()).thenReturn(metadata);
 
@@ -594,16 +720,62 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         indexRequest.source(Collections.emptyMap());
         AtomicBoolean responseCalled = new AtomicBoolean(false);
         AtomicBoolean failureCalled = new AtomicBoolean(false);
-        ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, ActionListener.wrap(
-            response -> responseCalled.set(true),
-            e -> {
+        ActionTestUtils.execute(
+            singleItemBulkWriteAction,
+            null,
+            indexRequest,
+            ActionListener.wrap(response -> responseCalled.set(true), e -> {
                 assertThat(e, sameInstance(exception));
                 failureCalled.set(true);
-            }));
+            })
+        );
 
         assertEquals("pipeline2", indexRequest.getPipeline());
-        verify(ingestService).executeBulkRequest(eq(1), bulkDocsItr.capture(), failureHandler.capture(),
-            completionHandler.capture(), any());
+        verify(ingestService).executeBulkRequest(
+            eq(1),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
+    }
+
+    public void testIngestCallbackExceptionHandled() throws Exception {
+        BulkRequest bulkRequest = new BulkRequest();
+        IndexRequest indexRequest1 = new IndexRequest("index");
+        indexRequest1.source(Collections.emptyMap());
+        indexRequest1.setPipeline("testpipeline");
+        bulkRequest.add(indexRequest1);
+
+        AtomicBoolean responseCalled = new AtomicBoolean(false);
+        AtomicBoolean failureCalled = new AtomicBoolean(false);
+        ActionTestUtils.execute(
+            action,
+            null,
+            bulkRequest,
+            ActionListener.wrap(response -> { responseCalled.set(true); }, e -> { failureCalled.set(true); })
+        );
+
+        // check failure works, and passes through to the listener
+        assertFalse(action.isExecuted); // haven't executed yet
+        assertFalse(responseCalled.get());
+        assertFalse(failureCalled.get());
+        verify(ingestService).executeBulkRequest(
+            eq(bulkRequest.numberOfActions()),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
+        indexRequest1.process();
+        completionHandler.getValue().accept(Thread.currentThread(), null);
+
+        // check failure passed through to the listener
+        assertFalse(action.isExecuted);
+        assertFalse(responseCalled.get());
+        assertTrue(failureCalled.get());
     }
 
     private void validateDefaultPipeline(IndexRequest indexRequest) {
@@ -612,21 +784,28 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         AtomicBoolean responseCalled = new AtomicBoolean(false);
         AtomicBoolean failureCalled = new AtomicBoolean(false);
         assertNull(indexRequest.getPipeline());
-        ActionTestUtils.execute(singleItemBulkWriteAction, null, indexRequest, ActionListener.wrap(
-            response -> {
-                responseCalled.set(true);
-            },
-            e -> {
+        ActionTestUtils.execute(
+            singleItemBulkWriteAction,
+            null,
+            indexRequest,
+            ActionListener.wrap(response -> { responseCalled.set(true); }, e -> {
                 assertThat(e, sameInstance(exception));
                 failureCalled.set(true);
-            }));
+            })
+        );
 
         // check failure works, and passes through to the listener
         assertFalse(action.isExecuted); // haven't executed yet
         assertFalse(responseCalled.get());
         assertFalse(failureCalled.get());
-        verify(ingestService).executeBulkRequest(eq(1), bulkDocsItr.capture(), failureHandler.capture(),
-            completionHandler.capture(), any());
+        verify(ingestService).executeBulkRequest(
+            eq(1),
+            bulkDocsItr.capture(),
+            failureHandler.capture(),
+            completionHandler.capture(),
+            any(),
+            eq(Names.WRITE)
+        );
         assertEquals(indexRequest.getPipeline(), "default_pipeline");
         completionHandler.getValue().accept(null, exception);
         assertTrue(failureCalled.get());
@@ -636,6 +815,6 @@ public class TransportBulkActionIngestTests extends ESTestCase {
         completionHandler.getValue().accept(DUMMY_WRITE_THREAD, null);
         assertTrue(action.isExecuted);
         assertFalse(responseCalled.get()); // listener would only be called by real index action, not our mocked one
-        verifyZeroInteractions(transportService);
+        verifyNoMoreInteractions(transportService);
     }
 }
